# graph-enhanced-rag

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  STRESS_TESTING.md  nixpacks.toml  railpack.toml  railway.json  requirements.txt  start.sh
app/: auth.py  config.py  main.py
app/api/: graph.py  health.py
app/models/: db_models.py
app/services/: __init__.py  graph.py  ingestion.py
app/static/assets/: index-BB5_JgUW.js
backend/: .env.example  nixpacks.toml  pyproject.toml  railpack.toml  railway.json  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  graph.py  health.py  ingest.py
backend/app/models/: __init__.py  db_models.py  schemas.py
backend/app/services/: canonicalization.py  extraction.py  graph.py  ingestion.py
backend/app/static/: index.html
backend/app/static/assets/: index-CasUblJ2.css
backend/app/utils/: logging_config.py  normalization.py  rate_limit.py  retry.py  url_scraper.py
backend/evals/: README.md  dataset.jsonl
backend/scripts/: run_eval.py
backend/tests/: test_api.py  test_extraction.py  test_graph.py
backend/tests/stress/: locustfile.py
frontend/: .env.example  index.html  package-lock.json  package.json  railpack.toml  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: GraphFlow.jsx  InputPanel.jsx
frontend/src/data/: demoGraph.js
frontend/src/services/: api.js
graph-rag-ui/: .env.example  package.json  vite.config.js
graph-rag-ui/src/: App.jsx
graph-rag-ui/src/components/: GraphFlow.jsx  (+1 more)
tests/: conftest.py
(+1 files in other folders)
